[gd_scene load_steps=7 format=3 uid="uid://equa18knuqes"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_4hdus"]
[ext_resource type="Theme" uid="uid://bgb7t63ytou7k" path="res://Assets/Theme/DarkTheme/Dark.theme" id="1_e8ps6"]
[ext_resource type="Script" path="res://Scripts/MusicHandler/VolumeSlider.gd" id="2_amytl"]
[ext_resource type="FontFile" uid="uid://bt80dg37r6a63" path="res://Assets/Theme/DarkTheme/Fonts/PixelFont.ttf" id="2_gp6wc"]
[ext_resource type="Texture2D" uid="uid://cxwlma7rpdgm3" path="res://Textures/UI_Images/Backgrounds/OptionsBackground.png" id="3_hgxif"]
[ext_resource type="Texture2D" uid="uid://cnl3678thltr0" path="res://Textures/UI_Images/Frames/OptionsFrameBack.png" id="4_8m5fa"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_e8ps6")
script = ExtResource("1_4hdus")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hgxif")

[node name="TextureRect2" type="TextureRect" parent="."]
custom_minimum_size = Vector2(700, 315)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -157.5
offset_right = 350.0
offset_bottom = 157.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8m5fa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.0
offset_top = -143.0
offset_right = 335.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50
text = "Impostazioni"
horizontal_alignment = 1

[node name="OptionsContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="OptionsVContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer"]
layout_mode = 2

[node name="MusicHContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/MusicHContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Musica"
horizontal_alignment = 1

[node name="MusicButton" type="OptionButton" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/MusicHContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")
theme_override_fonts/font = ExtResource("2_gp6wc")

[node name="VolumeHContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer"]
layout_mode = 2

[node name="VolumeLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/VolumeHContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/VolumeHContainer"]
custom_minimum_size = Vector2(550, 55)
layout_mode = 2
theme = ExtResource("1_e8ps6")
max_value = 1.0
step = 0.001
script = ExtResource("2_amytl")
bus_name = "Music"

[node name="FullScreenHContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer"]
layout_mode = 2

[node name="FullScreenLabel" type="Label" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/FullScreenHContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "Full-Screen"

[node name="FullScreenCheckBox" type="CheckBox" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/FullScreenHContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("1_e8ps6")
keep_pressed_outside = true

[node name="ResolutionHContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")

[node name="ResolutionButton" type="OptionButton" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer"]
layout_mode = 2
theme = ExtResource("1_e8ps6")
theme_override_fonts/font = ExtResource("2_gp6wc")

[node name="MainMenuButton" type="Button" parent="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_gp6wc")
theme_override_font_sizes/font_size = 25
text = "Menu Principale"

[connection signal="item_selected" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/MusicHContainer/MusicButton" to="." method="_on_music_button_item_selected"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/FullScreenHContainer/FullScreenCheckBox" to="." method="_on_full_screen_check_box_toggled"]
[connection signal="focus_entered" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer/ResolutionButton" to="." method="_on_resolution_button_focus_entered"]
[connection signal="item_focused" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer/ResolutionButton" to="." method="_on_resolution_button_item_focused"]
[connection signal="item_selected" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="mouse_entered" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer/ResolutionButton" to="." method="_on_resolution_button_mouse_entered"]
[connection signal="toggled" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/ResolutionHContainer/ResolutionButton" to="." method="_on_resolution_button_toggled"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/GridContainer/OptionsContainer/OptionsVContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
